--- a/src/main.css
+++ b/src/main.css
@@ -18,6 +18,7 @@
   background-color: black;
   color: white;
   --auth-size: min(calc(40vw + 40vh), 640px);
+  --cyber-size: min(calc(2.5vw + 2.5vh), 64px);
 }
 
 body {
@@ -177,12 +178,13 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-family: xolonium;
 }
 
 #cyber-container {
   background-color: #0a1016;
-  width: 95vw;
-  height: 95vh;
+  width: 90vw;
+  height: 90vh;
   border: 1px solid white;
   display: flex;
 }
@@ -191,13 +193,15 @@ body {
   padding: 24px;
   display: flex;
   flex-direction: column;
+}
+
+#top-nav, #bottom-nav {
+  margin-top: auto;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 24px;
-}
-
-#cyber-container nav > a:first-child {
-  margin-top: auto;
 }
 
 .nav-button {
@@ -205,16 +209,93 @@ body {
   width: 42px;
 }
 
-.nav-button:active {
-  fill: steelblue;
+.nav-button.nav-selected {
+  fill: #0077ff;
 }
 
 #profile-picture {
-  margin-top: auto;
+  width: 50px;
+  border: 3px solid white;
+  border-radius: 100%;
 }
 
-#profile-picture > img {
-  width: 50px;
-  border: 2px solid white;
-  border-radius: 100%;
+#profile-picture.nav-selected {
+  border-color: #0077ff;
+}
+
+#cyber-home-container {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: calc(var(--cyber-size) / 3);
+}
+
+#cyber-home-container h1 {
+  margin: 0;
+  font-size: var(--cyber-size);
+}
+
+#cyber-home-links {
+  display: flex;
+  gap: calc(var(--cyber-size) / 2);
+}
+
+#cyber-home-links a {
+  text-decoration: none;
+  background-color: transparent;
+  padding: calc(var(--cyber-size) / 7) calc(var(--cyber-size) / 2);
+  border: calc(var(--cyber-size) / 20) solid white;
+  border-radius: calc(var(--cyber-size));
+  color: inherit;
+  font-family: inherit;
+  font-size: calc(var(--cyber-size) / 2);
+}
+
+#cyber-chats-container {
+  flex-grow: 1;
+  display: flex;
+  gap: 24px;
+}
+
+#cyber-chats-main {
+  background-color: black;
+  width: 360px;
+}
+
+#cyber-chats-main h1 {
+  margin: 0;
+  height: 15%;
+  padding-inline: 18px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+ 
+#friend-list {
+  background-color: black;
+  height: 85%;
+  padding-bottom: 28px;
+  overflow-y: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+#friend-list::-webkit-scrollbar {
+  display: none;
+}
+
+#friend-list .friend-card {
+  background-color: #22222f;
+  width: 100%;
+  height: 96px;
+  margin-bottom: 12px;
+  border-radius: 16px;
+  
+}
+
+#cyber-chats-content {
+  background-color: black;
+  flex-grow: 1;
 }
