--- a/src/main.css
+++ b/src/main.css
@@ -213,13 +213,13 @@ body {
   fill: #0077ff;
 }
 
-#profile-picture {
+#nav-pfp {
   width: 50px;
   border: 3px solid white;
   border-radius: 100%;
 }
 
-#profile-picture.nav-selected {
+#nav-pfp.nav-selected {
   border-color: #0077ff;
 }
 
@@ -296,6 +296,120 @@ body {
 }
 
 #cyber-chats-content {
-  background-color: black;
   flex-grow: 1;
+  background-color: black;
+}
+
+#cyber-account-container {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+#cyber-account-pfp {
+  padding: 25px;
+  display: grid;
+  place-content: center;
+}
+
+#account-pfp-container {
+  position: relative;
+}
+
+#account-pfp {
+  width: 220px;
+  border: 12px solid #333;
+  border-radius: 100%;
+}
+
+#pfp-edit-icon-container {
+  background-color: #2f2f2f;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  display: grid;
+  place-content: center;
+  position: absolute;
+  bottom: 15px;
+  right: 5px;
+}
+
+.pfp-edit-icon {
+  fill: gray;
+  width: 50px;
+}
+
+#cyber-account-features {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  overflow-y: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+#cyber-account-features::-webkit-scrollbar {
+  display: none;
+}
+
+#account-feature-container {
+  height: 100%;
+  width: 35rem;
+}
+
+.account-feature {
+  padding: 1rem;
+  display: flex;
+  gap: 1rem;
+}
+
+.account-info-icon {
+  width: 50px;
+  display: grid;
+  place-content: center;
+}
+
+.account-info-icon svg {
+  fill: #777;
+  width: 40px;
+}
+
+.account-feature .account-info {
+  flex-grow: 1;
+  width: min-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.account-info label {
+  color: #777;
+  font-size: 1.2rem;
+}
+
+.account-info span {
+  width: 80%;
+  color: white;
+  font-size: 1.7rem;
+}
+
+.account-info-edit-icon {
+  display: grid;
+  place-content: center;
+}
+
+.info-edit-icon {
+  fill: white;
+  width: 30px;
+}
+
+.account-feature button {
+  background-color: transparent;
+  width: 100%;
+  height: 3rem;
+  border: 2px solid red;
+  color: red;
+  font-family: inherit;
+  font-size: 1.8rem;
 }
