--- a/src/main.css
+++ b/src/main.css
@@ -413,3 +413,69 @@ body {
   font-family: inherit;
   font-size: 1.8rem;
 }
+
+#cyber-settings-container {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+#cyber-settings-container h1 {
+  margin: 0;
+  height: 15%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#cyber-settings-features {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.settings-feature {
+  background-color: #777777cc;
+  height: 50px;
+  padding-inline: 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.settings-feature span {
+  font-size: 2rem;
+}
+
+.settings-feature select {
+  background-color: black;
+  width: 120px;
+  height: 40px;
+  padding: 4px 8px;
+  border: 1px solid white;
+  color: inherit;
+  font-size: 1.5rem;
+}
+
+.input-type-toggle {
+  background-color: black;
+  width: 80px;
+  height: 40px;
+  padding-inline: 8px;
+  border: 1px solid white;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.input-type-toggle div {
+  background-color: #ccc;
+  width: 28px;
+  height: 28px;
+}
+
+.input-type-toggle.toggle-on {
+  background-color: #0077ff;
+  justify-content: flex-end;
+}
