--- a/src/main.css
+++ b/src/main.css
@@ -434,18 +434,26 @@ body {
 }
 
 #chats-content-bottom {
+  overflow-y: auto;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
 }
 
 #chat-display {
+  overflow-y: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
   flex-grow: 1;
   padding: 2rem;
   padding-left: 0;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+}
+
+#chat-display::-webkit-scrollbar {
+  display: none;
 }
 
 .message-card {
@@ -510,6 +518,10 @@ body {
   color: white;
   font-family: inherit;
   font-size: 1.2rem;
+
+  &:focus {
+    outline: none;
+  }
 }
 
 #chat-input button {
