--- a/src/main.css
+++ b/src/main.css
@@ -773,6 +773,129 @@ button#add-friend:hover, button#add-friend:active {
   flex-direction: column;
 }
 
+#add-friend-modal {
+  background-color: #000000dd;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  display: grid;
+  place-content: center;
+}
+
+#add-friend-modal > div {
+  background-color: #444455;
+  width: 480px;
+  height: 480px;
+  border-radius: 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+#add-friend-modal-top {
+  min-height: 12%;
+  display: grid;
+  place-content: center;
+  position: relative;
+}
+
+#add-friend-modal-top h1 {
+  margin: 0;
+  font-size: 1.7rem;
+}
+
+#add-friend-modal-top div {
+  width: 60px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: 0;
+}
+
+#add-friend-modal-top button {
+  background-color: transparent;
+  width: 40px;
+  height: 40px;
+  border: none;
+  border-radius: 100%;
+  display: grid;
+  place-content: center;
+  position: absolute;
+}
+
+#add-friend-modal-top button:hover {
+  background-color: #666;
+}
+
+#add-friend-modal-top svg {
+  fill: white;
+  width: 30px;
+}
+
+#add-friend-modal hr {
+  margin: 0;
+  border-color: gray;
+}
+
+#add-friend-modal-bottom {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
+}
+
+#add-friend-input {
+  min-height: 10%;
+  display: flex;
+  border: 1px solid white;
+}
+
+#add-friend-input div {
+  width: 10%;
+  height: 100%;
+  display: grid;
+  place-content: center;
+}
+
+#add-friend-input svg {
+  fill: white;
+  width: 30px;
+}
+
+#add-friend-input input {
+  flex-grow: 1;
+  background-color: transparent;
+  height: 100%;
+  padding-right: 12px;
+  border: none;
+  color: inherit;
+  font-family: inherit;
+  font-size: 1rem;
+}
+
+#add-friend-input input:focus {
+  outline: none;
+}
+
+#add-friend-input button {
+  align-self: center;
+  background-color: #0077ff;
+  width: 15%;
+  height: 70%;
+  margin-right: 4px;
+  border: none;
+  border-radius: 4px;
+  color: inherit;
+  font-family: inherit;
+}
+
+#add-friend-input button:active {
+  background-color: #0077ffaa;
+}
+
 #friends-search {
   display: flex;
   border: 1px solid white;
@@ -868,13 +991,13 @@ button#add-friend:hover, button#add-friend:active {
 }
 
 .friend-card-name {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   font-weight: 700;
 }
 
 .friend-card-title {
   color: #ffffff99;
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 
 .friend-card-buttons {
